# junkcode

./: .gitignore  .gitmodules  Package.swift  README.md  appveyor.yml  circle.yml  conanfile.txt  opencv.podspec
.github/workflows/: onnx.yml  test.yaml
1.project/: jscaffold.md
4.archive/ansible/: README.md  UbuntuDevMachine-1804.yml  WindowsLinuxSubsystem-Xenial.yml
OpenCV/4.5.5/: OpenCV.podspec
ansible/: README.md  UbuntuDevMachine-1704.yml  UbuntuDevMachine-1804.yml  VirtualBoxUbuntuDevHost-Ansible2.4.yml  VirtualBoxUbuntuDevHost.yml  VirtualBoxUbuntuDevMachine.yml  VirtualBoxUbuntuGuest-VBox.yml  VirtualBoxUbuntuGuest.yml  WindowsLinuxSubsystem-Xenial.yml
blog/asyncfuture2/: asyncfuture2.pro  main.cpp
cmake/googletest/: CMakeLists.txt  External_GTest.cmake
cmake/googletest/src/: main.cpp
conan/QConanExtra/: conanfile.py
conan/example/: conanfile.txt  conaninfo.txt  example.pro  main.cpp  tst_loading.qml
conan/ini_to_env/: conanfile.py
conan/preqmake/: conanfile.py
conan/qmake_extra/: conanfile.py
conan/qsingleapplication/: conanfile.py
conan/quickpromise/: README.md  conanfile.py  qconanextra.json
docs/: github-link-test.md  test.md
google/: ColorCode.gs
jupyter/: test.ipynb
local-testing/sample1/: README.md
nodejs/voting/: index.js  package-lock.json  package.json
qmlweb/clicktests/: index.html
qt/androidmetricdemo/: androidmetricdemo.pro  main.cpp
qt/benchmark/: benchmark.pro  qpm.json  tst_benchmarktests.cpp
qt/cmakedemo/: CMakeLists.txt  main.cpp  main.qml
qt/codesnippet/: Line.qml  LineDemo.qml
qt/config-qt-kit/: README.md  config-qt-kit.pro  main.cpp
qt/grab-image-promise/: grab-image-promise.pro  main.cpp  main.qml  qpm.json
qt/qbs/: installer.qbs
qt/qpm_static_library/: rfc.h  static_library.h
qtcwizard-project/: codebase-compare.sh  codebase-install.sh  install.sh  test.sh  update.sh
react.js/: polymer-layout.css
(+127 files in other folders)
